[flake8]
exclude = __pycache__, migrations
ignore = E203, E266, E501, W503, C812
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9


[isort]
profile = black
known_first_party = nexus,testapp
known_third_party = django
line_length = 88
multi_line_output = 3

[metadata]
license_file = LICENSE

[tool:multilint]
paths = nexus
        runtests.py
        setup.py
        tests
